  The Update:

  Additions:
    - Added Magnesium.
    - Added Strontium.
    - Added Barium.
    - Added Radium.
    - Added tier 3 solar panels and solar panel equipment.
    - Added a way to create calcium sulfate. Im a merciful dictator, after all.
    - Added RTG's, a small but expensive building that can take radioactive materials and turn them into power. Has a small neighbour bonus.

  Changes:
    - Changed CRT's recipe to take CRT framing and screens.
    - Moved around the items needed in CRT/Oscilliscopes/RCU's.
    - Made Oscilliscopes slightly cheaper. Slightly.
    - Changed polonium reactors to give off pollution.
    - Changed molten-inators to start from 10 pollution/m, and gets to 6p/m at tier 3.
    - Changed calcite filtering to take 4 seconds instead of 1.3.
    - Also changed calcite filtering to occsionally give off sea salt.
    - Changed modules to take 4 rubber instead of 2.

  Fixes:
    - Fixed the science pack item names captilisation.

---------------------------------------------------------------------------------------------------
Version: 0.6.121
Date: 2024-12-06
  The finished update? what am i, a good modder? Update:

  Fixes:
    - Fixed gem leeching not having icons.
    - Fixed garnet dust and garnet dust not being unlockable.

---------------------------------------------------------------------------------------------------
Version: 0.6.120
Date: 2024-12-06
  The breeze flows through the marrow used to type this infinite dance Update:

  Additions:
    - Added the concrete revamp! concrete now takes two steps, first making its slurry and then casting it into the concrete bricks.

  Changes:
    - Changed refined concrete to give a 165% walking speed increase, instead of 150%.

  Fixes:
    - Moved silicone into the correct subgroup.

---------------------------------------------------------------------------------------------------
Version: 0.6.110
Date: 2024-12-05