@@ -9075,24 +9075,27 @@ fluid_boxes =
     production_type = "input",
     pipe_covers = pipecoverspictures(),
     volume = 1500,
-    pipe_connections = {{ flow_direction="input", direction = defines.direction.south, position = {0, 2} }},
+    pipe_connections = {{ flow_direction="input", direction = defines.direction.south, position = {1, 2} }},
   },
   {
-
+    production_type = "input",
+    pipe_covers = pipecoverspictures(),
+    volume = 1500,
+    pipe_connections = {{ flow_direction="input", direction = defines.direction.south, position = {-1, 2} }},
+  },
+  {
     production_type = "input",
     pipe_covers = pipecoverspictures(),
     volume = 1500,
     pipe_connections = {{ flow_direction="input", direction = defines.direction.north, position = {0, -2} }},
   },
   {
-
     production_type = "output",
     pipe_covers = pipecoverspictures(),
     volume = 1500,
     pipe_connections = {{ flow_direction="output", direction = defines.direction.west, position = {-2, 0} }},
   },
   {
-
     production_type = "output",
     pipe_covers = pipecoverspictures(),
     volume = 1500,
