@@ -3038,7 +3038,7 @@ data:extend({
     name = "pm-ruby-crystal-slurry",
     enabled = false,
     energy_required = 6,
-    category = "pm-washing",
+    category = "pm-mixing",
     subgroup = "pm-ruby-ptm",
     order = "x",
     allow_productivity = true,
@@ -3058,7 +3058,7 @@ data:extend({
     name = "pm-citrine-crystal-slurry",
     enabled = false,
     energy_required = 6,
-    category = "pm-washing",
+    category = "pm-mixing",
     subgroup = "pm-citrine-ptm",
     order = "x",
     allow_productivity = true,
@@ -3078,7 +3078,7 @@ data:extend({
     name = "pm-emerald-crystal-slurry",
     enabled = false,
     energy_required = 6,
-    category = "pm-washing",
+    category = "pm-mixing",
     subgroup = "pm-emerald-ptm",
     order = "x",
     allow_productivity = true,
@@ -3098,7 +3098,7 @@ data:extend({
     name = "pm-sapphire-crystal-slurry",
     enabled = false,
     energy_required = 6,
-    category = "pm-washing",
+    category = "pm-mixing",
     subgroup = "pm-sapphire-ptm",
     order = "x",
     allow_productivity = true,
@@ -3118,7 +3118,7 @@ data:extend({
     name = "pm-lapis-lazuli-crystal-slurry",
     enabled = false,
     energy_required = 6,
-    category = "pm-washing",
+    category = "pm-mixing",
     subgroup = "pm-lapis-lazuli-ptm",
     order = "x",
     allow_productivity = true,
@@ -3138,7 +3138,7 @@ data:extend({
     name = "pm-garnet-crystal-slurry",
     enabled = false,
     energy_required = 6,
-    category = "pm-washing",
+    category = "pm-mixing",
     subgroup = "pm-garnet-ptm",
     order = "x",
     allow_productivity = true,
@@ -3586,7 +3586,7 @@ data:extend({
     name = "pm-concrete-slurry",
     enabled = false,
     energy_required = 10,
-    category = "pm-washing",
+    category = "pm-mixing",
     subgroup = "terrain",
     order = "A",
     allow_productivity = true,
