@@ -11,6 +11,7 @@ Date: 2024-12-08
     - Added tier 3 solar panels and solar panel equipment.
     - Added a way to create calcium sulfate. Im a merciful dictator, after all.
     - Added RTG's, a small but expensive building that can take radioactive materials and turn them into power. Has a small neighbour bonus.
+    - Added mixing tanks, a new 6x6 building that handles making things like sludges and slurries. Enjoy revamping your factory, suckers!
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
